--- a/dev.ipynb
+++ b/dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "536df7f4",
+   "id": "c950e86a",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41820e1c",
+   "id": "2f92cbd4",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea7b724d",
+   "id": "9314d3f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7daba018",
+   "id": "f044b977",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4a02cf73",
+   "id": "3830dd3a",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "603fd69c",
+   "id": "823d2f6a",
    "metadata": {},
    "source": [
     "### Encoder\n",
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8449d834",
+   "id": "4800e216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b57977e8",
+   "id": "22dc57aa",
    "metadata": {},
    "source": [
     "### Decoder Block\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af464663",
+   "id": "009f5df1",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d7c292",
+   "id": "7f0a8b78",
    "metadata": {},
    "source": [
     "### Decoder\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c28ead35",
+   "id": "4d874218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6960dfbd",
+   "id": "d6b97ec7",
    "metadata": {},
    "source": [
     "### Transformer"
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19ea26bf",
+   "id": "d8386e58",
    "metadata": {},
    "source": [
     "<img src=./media/transformer.png alt=\"self-attention\" width=\"300\"/>"
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3265fc2f",
+   "id": "3acff88c",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778dbb63",
+   "id": "8edb6ef0",
    "metadata": {},
    "source": [
     "### Testing"
@@ -486,29 +486,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7cf2705b",
+   "execution_count": null,
+   "id": "6111d7b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
+    "\n",
+    "x = (torch.multinomial(torch.tensor([1,2,3,4,5,6,7],dtype=torch.float), 16, replacement=True)\n",
+    "     .reshape(2,-1)\n",
+    "    .to(device))\n",
+    "trg= (torch.multinomial(torch.tensor([1,2,3,4,5,8,9],dtype=torch.float), 16, replacement=True)\n",
+    "     .reshape(2,-1)\n",
+    "    .to(device))\n",
+    "\n",
+    "src_pad_idx, trg_pad_idx = 0 \n",
+    "src_vocab_size, trg_vocab_size = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fc6e92ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cuda')"
+       "tensor([[4, 4, 4, 3, 4, 4, 2, 5],\n",
+       "        [3, 5, 6, 4, 6, 5, 5, 2]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
-    "\n",
-    "\n",
-    "x = torch.tensor([[1,5,6,4,3,5,2,0],\n",
-    "                  [1,8, 7,4,7,2,2]]).to(devi)\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
