--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c950e86a",
+   "execution_count": 1,
+   "id": "55cb2ec8",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f92cbd4",
+   "id": "3b9ec0ed",
    "metadata": {},
    "source": [
     "### Self attention module\n",
@@ -39,10 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9314d3f8",
+   "execution_count": 4,
+   "id": "d3d393ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SelfAttention(\n",
+       "  (values): Linear(in_features=2, out_features=2, bias=False)\n",
+       "  (keys): Linear(in_features=2, out_features=2, bias=False)\n",
+       "  (queries): Linear(in_features=2, out_features=2, bias=False)\n",
+       "  (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class SelfAttention(nn.Module):\n",
     "    def __init__(self, model_dim, heads ):\n",
@@ -95,12 +111,15 @@
     "        # dummy variable l corresponds to key_len and value_len\n",
     "        out = self.fc_out(out)\n",
     "        return out\n",
-    "a = SelfAttention(model_dim=12, heads=6)"
+    "    \n",
+    "    \n",
+    "a = SelfAttention(model_dim=12, heads=6)\n",
+    "a"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f044b977",
+   "id": "f5502df1",
    "metadata": {},
    "source": [
     "### Transformer block \n",
@@ -109,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3830dd3a",
+   "execution_count": 5,
+   "id": "6c4df960",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +153,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "823d2f6a",
+   "id": "735022e2",
    "metadata": {},
    "source": [
     "### Encoder\n",
@@ -182,10 +201,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4800e216",
+   "execution_count": 6,
+   "id": "3398d030",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Encoder(\n",
+       "  (word_emedding): Embedding(100, 12)\n",
+       "  (positional_embedding): Embedding(10, 12)\n",
+       "  (layers): ModuleList(\n",
+       "    (0): TransformerBlock(\n",
+       "      (attention): SelfAttention(\n",
+       "        (values): Linear(in_features=6, out_features=6, bias=False)\n",
+       "        (keys): Linear(in_features=6, out_features=6, bias=False)\n",
+       "        (queries): Linear(in_features=6, out_features=6, bias=False)\n",
+       "        (fc_out): Linear(in_features=12, out_features=12, bias=True)\n",
+       "      )\n",
+       "      (norm1): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "      (norm2): LayerNorm((12,), eps=1e-05, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.3, inplace=False)\n",
+       "      (feed_forward): Sequential(\n",
+       "        (0): Linear(in_features=12, out_features=120, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=120, out_features=12, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Encoder(nn.Module):\n",
     "    \n",
@@ -227,12 +279,13 @@
     "        positional_word_embedding = self.word_embedding(x) + self.position_embedding(positions)\n",
     "        out = self.dropout(position_aware_word_embedding)\n",
     "        \n",
-    "e = Encoder(100,12, 2, \"cpu\", 10, 0.3, 10)\n"
+    "e = Encoder(100,12, 2, \"cpu\", 10, 0.3, 10)\n",
+    "e"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22dc57aa",
+   "id": "16c15398",
    "metadata": {},
    "source": [
     "### Decoder Block\n",
@@ -241,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "009f5df1",
+   "execution_count": 7,
+   "id": "12579afc",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +329,7 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0a8b78",
+   "id": "de76cd87",
    "metadata": {},
    "source": [
     "### Decoder\n",
@@ -318,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4d874218",
+   "id": "6dade700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b97ec7",
+   "id": "37f4b20d",
    "metadata": {},
    "source": [
     "### Transformer"
@@ -370,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8386e58",
+   "id": "7337ea91",
    "metadata": {},
    "source": [
     "<img src=./media/transformer.png alt=\"self-attention\" width=\"300\"/>"
@@ -378,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3acff88c",
+   "execution_count": 9,
+   "id": "d96cc890",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +465,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edb6ef0",
+   "id": "6be40bdc",
    "metadata": {},
    "source": [
     "### Testing"
@@ -486,43 +539,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6111d7b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
-    "\n",
-    "x = (torch.multinomial(torch.tensor([1,2,3,4,5,6,7],dtype=torch.float), 16, replacement=True)\n",
-    "     .reshape(2,-1)\n",
-    "    .to(device))\n",
-    "trg= (torch.multinomial(torch.tensor([1,2,3,4,5,8,9],dtype=torch.float), 16, replacement=True)\n",
-    "     .reshape(2,-1)\n",
-    "    .to(device))\n",
-    "\n",
-    "src_pad_idx, trg_pad_idx = 0 \n",
-    "src_vocab_size, trg_vocab_size = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "fc6e92ff",
+   "execution_count": 13,
+   "id": "2962734a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[4, 4, 4, 3, 4, 4, 2, 5],\n",
-       "        [3, 5, 6, 4, 6, 5, 5, 2]])"
+       "'cpu'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# torch.cuda.is_available()\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d3977d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
+    "device = \"cpu\"\n",
+    "\n",
+    "# creating sample src input\n",
+    "x = (torch.multinomial(torch.tensor([1,2,3,4,5,6,7],dtype=torch.float), 16, replacement=True)\n",
+    "     .reshape(2,-1)\n",
+    "    .to(device))\n",
+    "# creating sample trg output \n",
+    "trg= (torch.multinomial(torch.tensor([1,2,3,4,5,8,9],dtype=torch.float), 16, replacement=True)\n",
+    "     .reshape(2,-1)\n",
+    "    .to(device))\n",
+    "\n",
+    "src_pad_idx = trg_pad_idx = 0 \n",
+    "src_vocab_size = trg_vocab_size = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1228f8d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m Transformer(src_vocab_size, trg_vocab_size, src_pad_idx, trg_pad_idx)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m----> 2\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrg\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(out)\n",
+      "File \u001b[0;32m~/.local/share/virtualenvs/transformer-ZSDFiGtT/lib/python3.8/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1106\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1107\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1111\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1112\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36mTransformer.forward\u001b[0;34m(self, src, trg)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, src, trg):\n\u001b[0;32m---> 48\u001b[0m     src_mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake_src_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43msrc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     49\u001b[0m     trg_mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmake_trg_mask(trg)\n\u001b[1;32m     50\u001b[0m     enc_src \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder(src, src_mask)\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36mTransformer.make_src_mask\u001b[0;34m(self, src)\u001b[0m\n\u001b[1;32m     32\u001b[0m src_mask \u001b[38;5;241m=\u001b[39m (src \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msrc_pad_idx)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# src_mask (N, 1, 1, src_len)\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msrc_mask\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/share/virtualenvs/transformer-ZSDFiGtT/lib/python3.8/site-packages/torch/cuda/__init__.py:216\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    212\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[1;32m    213\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    214\u001b[0m \u001b[38;5;66;03m# This function throws if there's a driver initialization error, no GPUs\u001b[39;00m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;66;03m# are found or any other error occurs\u001b[39;00m\n\u001b[0;32m--> 216\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cuda_init\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    217\u001b[0m \u001b[38;5;66;03m# Some of the queued calls may reentrantly call _lazy_init();\u001b[39;00m\n\u001b[1;32m    218\u001b[0m \u001b[38;5;66;03m# we need to just return without initializing in that case.\u001b[39;00m\n\u001b[1;32m    219\u001b[0m \u001b[38;5;66;03m# However, we must not let any *other* threads in!\u001b[39;00m\n\u001b[1;32m    220\u001b[0m _tls\u001b[38;5;241m.\u001b[39mis_initializing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero."
+     ]
+    }
+   ],
+   "source": [
+    "model = Transformer(src_vocab_size, trg_vocab_size, src_pad_idx, trg_pad_idx).to(device)\n",
+    "out = model(x, trg[:,:-1])\n",
+    "print(out)"
+   ]
   }
  ],
  "metadata": {
